# myui

./: .gitignore  CMakeLists.txt  cspell.json
examples-ex/clap-plugin/: CMakeLists.txt  clap-plugin.cpp
examples/dev0/: CMakeLists.txt  dev0.cpp  main.cpp
examples/hello/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  bridge-types.h  core-internal-types.h  core-public-types.h  core-types.h  dc.h  draw-core-static.h  internal-helper.h  internal-types.h  layouter.h  node-handle.h  pass-ops.h  renderer.cpp  renderer.h  tree-builder-bus.h  tree-builder.h  ui-actor.cpp  ui-actor.h  ui-frame-driver.h
lib/core/drawings/: drawing-types.h  renderer.cpp  renderer.h
lib/drawings/: CMakeLists.txt  drawing-types.h  renderer.cpp  renderer.h
lib/editor-frame/: CMakeLists.txt  editor-frame.h  editor-frame.mm
lib/include/briq/: application.h  editor.h
lib/include/myui/: application.h  editor.h
lib/infrastructure/editor-frame/: CMakeLists.txt  editor-frame.h  editor-frame.mm
lib/infrastructure/window/: CMakeLists.txt  cocoa-window.mm  window.h
lib/integration/: application.h  editor-integration.h
lib/window/: CMakeLists.txt  application.h  cocoa-window-floor.mm  cocoa-window.mm  myui-application.h  window-floor.h  window.h
prototype/: .gitignore  CMakeLists.txt  cocoa-window-floor.mm  cspell.json  dev0.cpp  interfaces.h  myui.h
prototype/myui/: cocoa-window-floor.mm  internal-helper.h  internal-types.h  layouter.h  node-handle.cpp  node-handle.h  public-types.h  tree-builder.h  ui-actor.cpp  ui-actor.h  window-floor.h
